# Idencrypt

./: CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES_0_8_1.md  RELEASE_NOTES_v1_0_0.md  RELEASE_NOTES_v1_1_0.md  RELEASE_NOTES_v1_2_0.md  REMEDIATION_CHECKLIST.md  VULNERABILITIES.md  build-and-release.yml  build.rs  install-man.sh
.github/workflows/: release-build.yml  rust.yml
c_src/: cache_system.c  vault_catalog.c  vault_core.h  vault_crypto.c  vault_engine.c  vault_ffi.c  vault_monitor.c  vault_name.c  vault_sandbox.c
docs/: TOOLS.md  vault_commands.md
scripts/: idenvault-daemon.sh  idenvault-shell.sh  install-linux-context-menu.sh  nautilus_idenvault.py
src/: crypto.rs  log.rs  main.rs  manual.rs  path_assistant.rs  sys_info.rs  vault.rs
src/c_src/: vault_core.h  vault_engine.c  vault_ffi.c
tests/: security_exploit.rs
