[package]
name = "IdenVault"
version = "1.2.0"
edition = "2021"
build = "build.rs"



[[bin]]
name = "IdenVault"
path = "src/main.rs"

[dependencies]
# CLI / Interação
colored = "3.1.1"
inquire = "0.9.4"
rustyline = "17.0.2"
rfd = "0.15.2"

# System & FS
sysinfo = "0.38.4"
home = "0.5.12"
chrono = "0.4"
ctrlc = "3.5.2"
libc = "0.2"

# Crypto
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"

# Utilitários
hex = "0.4.3"

# Windows
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_System_Threading"
] }

windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_JobObjects"
] }

[build-dependencies]
cc = "1.1"
winres = "0.1"
winresource = "0.1"

[package.metadata.bundle]

[profile.release]
opt-level = "z"     # Otimiza para tamanho
lto = true          # Link Time Optimization (otimização pesada no link)
codegen-units = 1   # Reduz unidades de codegen para melhor compressão
panic = "abort"     # Remove lógica de unwinding (reduz tamanho)
strip = true        # Remove símbolos de debug do binário final
